<resources>
    <string name="app_name">IMCapp</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="age">Edad</string>
    <string name="weight">Peso</string>
    <string name="calcular">Calcular</string>
    <string name="result">RESULTADO</string>
    <string name="Sobrepeso">Sobrepeso</string>
    <string name="PesoNormal">En tu peso</string>
    <string name="Infrapeso">Infrapeso</string>
    <string name="Obesidad">Obesidad</string>
    <string name="TextSobrepeso">Estás por encima de tu peso óptimo</string>
    <string name="TextNormal">Estás en tu peso óptimo</string>
    <string name="TextInfrapeso">Por debajo de tu peso óptimo</string>
    <string name="TextObesidad">Tienes un problema de obesidad</string>

</resources>