<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:paddingHorizontal="16dp"
    android:paddingVertical="32dp"
    android:layout_gravity="center"
    tools:context=".ImcCalculatorActivity"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/male"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_male"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/viewHeigth"
        app:layout_constraintEnd_toStartOf="@id/female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_male"
                app:tint="@color/teal_200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/female"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="16dp"

        app:layout_constraintBottom_toTopOf="@+id/viewHeigth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/male"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"

            >

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_female"
                app:tint="@color/teal_200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/viewHeigth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Altura"
                android:textColor="@color/title_text" />

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 cm"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rsHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="height"
                android:stepSize="1"
                android:valueFrom="120"
                android:valueTo="200"

                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/peso"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_male"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edad"
        app:layout_constraintTop_toBottomOf="@+id/viewHeigth"
        android:layout_marginEnd="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/peso"
                app:tint="@color/teal_200" />

            <TextView
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">


                <com.google.android.material.floatingactionbutton.FloatingActionButton

                    android:id="@+id/removeP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="remove"
                    android:src="@drawable/ic_remove"
                    app:backgroundTint="@color/purple_700"
                    app:tint="@color/white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="add"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/purple_700"
                    app:tint="@color/white" />


            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/edad"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_male"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHeigth">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="149dp"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:gravity="center"
                android:src="@drawable/ic_age"
                app:tint="@color/teal_200" />

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton

                    android:id="@+id/removeE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="remove2"
                    android:src="@drawable/ic_remove"
                    app:backgroundTint="@color/purple_700"
                    app:tint="@color/white" />


                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="add2"
                    android:src="@drawable/ic_add"
                    app:backgroundTint="@color/purple_700"
                    app:tint="@color/white" />


            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calcula"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/bg_button"
        android:text="@string/calcular"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edad"
 />


</androidx.constraintlayout.widget.ConstraintLayout>